# murajaah

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  murojaah_blueprint.md
.github/workflows/: ci.yml
murojaah_advanced/murojaah_advanced/flutter/: README.md
murojaah_advanced/murojaah_advanced/flutter/lib/stt/: audio_capture.dart  onnx_stt.dart
murojaah_advanced/murojaah_advanced/native/: CMakeLists.txt  CMakeLists_test.txt  README.md  audio_capture.mm  audio_capture_oboe.cpp  beam_decode.cpp  beam_decode.h  lexicon.cpp  lexicon.h  main_test.cpp  murojaah_core.cpp  murojaah_core.h  wav_reader.h
murojaah_app/murojaah_app/: .gitignore  README.md  pubspec.yaml
murojaah_app/murojaah_app/android/: gradle.properties
murojaah_app/murojaah_app/android/app/: build.gradle
murojaah_app/murojaah_app/android/app/src/main/: AndroidManifest.xml
murojaah_app/murojaah_app/android/app/src/main/kotlin/com/example/murojaah_app/: MainActivity.kt
murojaah_app/murojaah_app/assets/models/: README.txt
murojaah_app/murojaah_app/lib/: main.dart
murojaah_app/murojaah_app/lib/core/: alignment_service.dart  arabic_normalizer.dart  word_token.dart
murojaah_app/murojaah_app/lib/data/: quran_repository.dart  quran_seed.dart
murojaah_app/murojaah_app/lib/engine/: murojaah_engine.dart
murojaah_app/murojaah_app/lib/stt/: onnx_stt.dart  onnx_stt_native.dart  onnx_stt_stub.dart  simulated_stt.dart  stt_engine.dart
murojaah_app/murojaah_app/lib/ui/: app_theme.dart  murojaah_page.dart
murojaah_app/murojaah_app/native/: CMakeLists.txt  murojaah_core.cpp  murojaah_core.h
murojaah_app/murojaah_app/test/: widget_test.dart
murojaah_app/murojaah_app/web/: index.html  manifest.json
murojaah_app/murojaah_app/windows/: CMakeLists.txt
murojaah_app/murojaah_app/windows/runner/: Runner.rc  main.cpp
murojaah_complete/murojaah_complete/: README.md
murojaah_complete/murojaah_complete/data_pipeline/: README.md  build_quran_db.py  normalizer.py
murojaah_complete/murojaah_complete/flutter_patches/: README.md
murojaah_complete/murojaah_complete/flutter_patches/lib/stt/: asset_loader.dart
murojaah_complete/murojaah_complete/native/: CMakeLists.txt  README.md  ctc_decode.cpp  ctc_decode.h  dsp.cpp  dsp.h  murojaah_core.cpp  murojaah_core.h  ring_buffer.h  vad.cpp  vad.h
murojaah_complete/murojaah_complete/training/: README.md  convert_to_ort.py  export_onnx.py  requirements.txt  train_wav2vec2_ctc.py
scripts/: bootstrap.ps1  bootstrap.sh
